test/Fail/FunSort-X-SetOmega-PropOmega.err
FunSort-X-SetOmega-PropOmega.agda:6.13-18: error: [UnequalSorts]
Propω != funSort _3 Setω
when checking that the expression A → B has type Propω
